@@ -877,11 +877,25 @@ WIDGET_DEFAULT = {
         "battery_bar_color": "#00CCFF",
         "battery_bar_color_regen": "#44FF00",
         "battery_bar_bkg_color": "#88222222",
+        "show_battery_reading": False,
+        "battery_decimal_places": 1,
+        "font_size_battery": 16,
+        "font_weight_battery": "bold",
+        "font_color_battery": "#FFFFFF",
+        "battery_reading_offset_x": 0.5,
+        "battery_reading_text_alignment": "Center",
         "show_rpm_bar": True,
         "show_inverted_rpm": False,
         "rpm_bar_height": 14,
         "rpm_bar_color": "#FFFFFF",
         "rpm_bar_bkg_color": "#00222222",
+        "show_rpm_reading": False,
+        "rpm_decimal_places": 0,
+        "font_size_rpm": 20,
+        "font_weight_rpm": "bold",
+        "font_color_rpm": "#888888",
+        "rpm_reading_offset_x": 0.5,
+        "rpm_reading_text_alignment": "Center",
         "rpm_multiplier_safe": 0.91,
         "rpm_multiplier_redline": 0.95,
         "rpm_multiplier_critical": 0.97,
