@@ -1,5 +1,10 @@
 WIP
 -----------------------------
+* Gear Widget
+  - Add "show_rpm_reading" option (requested by users "ebeninca" and "EmperorOfFinland"), which shows RPM charge reading on RPM bar. This option is disabled by default.
+  - Add "show_battery_reading" option, which shows battery charge reading (percentage) on battery bar. This option is disabled by default.
+  - Add "decimal_places, font_size, font_weight, font_color, offset_x, text_alignment" options for customizing RPM and battery charge readings.
+
 * Misc
   - Fixed an issue that would prevent Track Info Editor from opening while "API state override" is activated.
 
